Updated build tast/properties

--- a/build.xml
+++ b/build.xml
@@ -160,6 +160,7 @@
 			</zipfileset>
 			<fileset dir="${buildDirRelease}">
 				<include name="${appSwfFile}" />
+				<include name="${loaderSwfFile}" />
 			</fileset>
 		</zip>
 	</target>
