--- a/build.properties
+++ b/build.properties
@@ -1,34 +1,35 @@
 ######## PROJECT SETTINGS ########
-### Uncomment and change values for your project
-appTitle=Project Template2
 
-### Main game class
+## Name of the game
 appName=GameApp
+
+## Package location of game
 package=${basedir}/src/com/gsn/games/mygame
-appClass=${package}/${appName}.as
 
+## Name of the loader (root SWF) (uncomment if different than default)
+#loaderName=GameLoader
 
-### Loader class
-loaderName=GameLoader
-loaderClass=${package}/${loaderName}.as
+## Name of the progress bar (uncomment if different than default)
+#progressBarName=ProgressBar
 
-
-### App size, BG color
+## App size, BG color (uncomment if different than defaults)
 #appWidth=760
 #appHeight=680
 #bgColor=FFFFFF
 #frameRate=30
 
-### Game ID
+## Game ID
 gameId=211
 
-### Optional flashVars (comma delimited)
+## Optional flashVars (comma delimited)
 flashVars=gameId:${gameId},mesmoCheatsEnabled:"true",cohort1:"something"
 
 
 ######## APP SETTINGS ########
-### Location of Flash Builder
+#### Change these if your setup differs
+
+## Location of Flash Builder
 #fbHome=/Applications/Adobe Flash Builder 4.6
 
-### Location of Flex SDK
+## Location of Flex SDK
 #flexHome=${fbHome}/sdks/4.6.0
