Implementation of GF2 v2.0 including improvements to progress bar, game app, loading, performance monitoring and various bug fixes.

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@ package=${basedir}/src/com/gsn/games/mygame
 gameId=211
 
 ## Optional flashVars (comma delimited)
-flashVars=gameId:${gameId},mesmoCheatsEnabled:"true",cohort1:"something"
+flashVars=mesmoGameId:${gameId},gameId:${gameId},mesmoCheatsEnabled:"true",cohort1:"something"
 
 
 ######## APP SETTINGS ########
