Addition of debuggingLevel to local FlashVars for testing

--- a/build.properties
+++ b/build.properties
@@ -22,14 +22,14 @@ package=${basedir}/src/com/gsn/games/mygame
 gameId=211
 
 ## Optional flashVars (comma delimited)
-flashVars=mesmoGameId:${gameId},gameId:${gameId},mesmoCheatsEnabled:"true",cohort1:"something"
+flashVars=mesmoGameId:${gameId},gameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
 
 
 ######## APP SETTINGS ########
 #### Change these if your setup differs
 
-## Location of Flash Builder
+## Location of Flash Builder (uncomment if different than defaults)
 #fbHome=/Applications/Adobe Flash Builder 4.6
 
-## Location of Flex SDK
+## Location of Flex SDK (uncomment if different than defaults)
 #flexHome=${fbHome}/sdks/4.6.0
