Improvements to build properties and the code templates

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@ package=${basedir}/src/com/gsn/games/mygame
 gameId=211
 
 ## Optional flashVars (comma delimited)
-flashVars=mesmoGameId:${gameId},gameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
+flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
 
 
 ######## APP SETTINGS ########
