--- a/build.properties
+++ b/build.properties
@@ -33,3 +33,7 @@ flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",coh
 
 ## Location of Flex SDK (uncomment if different than defaults)
 #flexHome=${fbHome}/sdks/4.6.0
+
+## Location of Flash
+#flashHome=/Applications/Adobe Flash CS6/Adobe Flash CS6.app/Contents/MacOS/Adobe Flash CS6
+#flashHome=C:\Program Files (x86)\Adobe\Adobe Flash CS6\Flash.exe
