Added support for asset bundling into ANT tasks

--- a/build.properties
+++ b/build.properties
@@ -37,3 +37,8 @@ flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",coh
 ## Location of Flash
 #flashHome=/Applications/Adobe Flash CS6/Adobe Flash CS6.app/Contents/MacOS/Adobe Flash CS6
 #flashHome=C:\Program Files (x86)\Adobe\Adobe Flash CS6\Flash.exe
+
+## Location of external assets
+bundlesSource=${basedir}/bundles-src/
+## Delete the generated bundle FLA files on completion
+deleteBundleFLAs=true
