Add ability to override the name of the bundling JSFL

--- a/build.properties
+++ b/build.properties
@@ -42,3 +42,5 @@ flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",coh
 bundlesSource=${basedir}/bundles-src/
 ## Delete the generated bundle FLA files on completion
 deleteBundleFLAs=true
+## Name of bundling JSFL
+assetBundleJSFLFile=BundleAssets_v1.5.1.jsfl
