Addition of theme directory into properties

--- a/build.properties
+++ b/build.properties
@@ -44,3 +44,6 @@ bundlesSource=${basedir}/bundles-src/
 deleteBundleFLAs=true
 ## Name of bundling JSFL
 assetBundleJSFLFile=BundleAssets_v1.5.1.jsfl
+
+######## THEME SETTINGS ########
+themeDir=${basedir}/themes/default
