--- a/build.properties
+++ b/build.properties
@@ -30,13 +30,14 @@ flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",coh
 
 ## Location of Flash Builder (uncomment if different than defaults)
 #fbHome=/Applications/Adobe Flash Builder 4.6
+#fbHome=/Program Files (x86)/Adobe/Adobe Flash Builder 4.6
 
 ## Location of Flex SDK (uncomment if different than defaults)
 #flexHome=${fbHome}/sdks/4.6.0
 
 ## Location of Flash
 #flashHome=/Applications/Adobe Flash CS6/Adobe Flash CS6.app/Contents/MacOS/Adobe Flash CS6
-#flashHome=C:\Program Files (x86)\Adobe\Adobe Flash CS6\Flash.exe
+#flashHome=C:/Program Files (x86)/Adobe/Adobe Flash CS6/Flash.exe
 
 ## Location of external assets
 bundlesSource=${basedir}/bundles-src/
