Breaking build.properties apart into build.user.properties and build.game.properties to allow games to check in game-specific build settings while retaining user settings locally. build.properties will continue to work if the properties are not defined in the .game or .user properties

--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,8 @@
 
     <!-- include project properties (overrides values below) -->
     <property file="build.properties"/>
+    <property file="build.user.properties"/>
+    <property file="build.game.properties"/>
 
 
     <!-- Default values -->
