--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,12 @@
 ######## PROJECT SETTINGS ########
 
+## THIS FILE IS DEPRECATED IN FAVOR OF THE SEPARATE BUILD.USER.PROPERTIES AND BUILD.GAME.PROPERTIES ##
+
 ## Name of the game
-appName=GameApp
+#appName=GameApp
 
 ## Package location of game
-package=${basedir}/src/com/gsn/games/mygame
+#package=${basedir}/src/com/gsn/games/mygame
 
 ## Name of the loader (root SWF) (uncomment if different than default)
 #loaderName=GameLoader
@@ -14,15 +16,15 @@ package=${basedir}/src/com/gsn/games/mygame
 
 ## App size, BG color (uncomment if different than defaults)
 #appWidth=760
-#appHeight=680
+#appHeight=570
 #bgColor=FFFFFF
 #frameRate=30
 
 ## Game ID
-gameId=211
+#gameId=211
 
 ## Optional flashVars (comma delimited)
-flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
+#flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
 
 
 ######## APP SETTINGS ########
@@ -40,11 +42,11 @@ flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",coh
 #flashHome=C:/Program Files (x86)/Adobe/Adobe Flash CS6/Flash.exe
 
 ## Location of external assets
-bundlesSource=${basedir}/bundles-src/
+#bundlesSource=${basedir}/bundles-src/
 ## Delete the generated bundle FLA files on completion
-deleteBundleFLAs=true
+#deleteBundleFLAs=true
 ## Name of bundling JSFL
-assetBundleJSFLFile=BundleAssets_v1.5.1.jsfl
+#assetBundleJSFLFile=BundleAssets_v1.5.1.jsfl
 
 ######## THEME SETTINGS ########
-themeDir=${basedir}/themes/default
+#themeDir=${basedir}/themes/default
